--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -18073,7 +18073,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>01:08:20 PM</string>
+             <string>07:37:57 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -19006,6 +19006,22 @@ SCROLL</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>virtualkeyboard</sender>
+   <signal>hideKeyboard()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>hideVirtualKeyboard()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>834</x>
+     <y>507</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>794</x>
+     <y>-41</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <designerdata>
   <property name="gridDeltaX">
@@ -19087,10 +19103,11 @@ SCROLL</string>
   <slot>btn_pause_clicked()</slot>
   <slot>btn_stop_clicked()</slot>
   <slot>btn_systemtool_toggled()</slot>
+  <slot>hideVirtualKeyboard()</slot>
  </slots>
  <buttongroups>
   <buttongroup name="mode_buttonGroup"/>
-  <buttongroup name="selectButtonGroup"/>
   <buttongroup name="page_buttonGroup"/>
+  <buttongroup name="selectButtonGroup"/>
  </buttongroups>
 </ui>
