--- a/configs/sim/gmoccapy/dro.glade
+++ b/configs/sim/gmoccapy/dro.glade
@@ -23,6 +23,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">1</property>
             <attributes>
               <attribute name="style" value="normal"/>
@@ -43,6 +44,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <attributes>
               <attribute name="style" value="normal"/>
               <attribute name="weight" value="bold"/>
@@ -62,6 +64,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">1</property>
             <property name="reference-type">2</property>
             <attributes>
@@ -83,6 +86,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="reference-type">2</property>
             <attributes>
               <attribute name="style" value="normal"/>
@@ -103,6 +107,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">1</property>
             <property name="reference-type">1</property>
             <attributes>
@@ -124,6 +129,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="reference-type">1</property>
             <attributes>
               <attribute name="style" value="normal"/>
@@ -144,6 +150,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">2</property>
             <attributes>
               <attribute name="style" value="normal"/>
@@ -164,6 +171,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">2</property>
             <property name="reference-type">1</property>
             <attributes>
@@ -185,6 +193,7 @@
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">label</property>
             <property name="display-units-mm">True</property>
+            <property name="font-size">22</property>
             <property name="joint-number">2</property>
             <property name="reference-type">2</property>
             <attributes>
