Gmoccapy: Move offsetpage buttons to table frame, add toggle button for calculator use
- calculator_use state (on/off) can be changed in tooltable and offsetpage but applies to both those tables
- calculator_use state is retained in the preferences file (initial state is OFF)

--- a/src/emc/usr_intf/gmoccapy/gmoccapy.glade
+++ b/src/emc/usr_intf/gmoccapy/gmoccapy.glade
@@ -762,6 +762,10 @@ uncomment selection</property>
     <property name="visible">True</property>
     <property name="can-focus">False</property>
   </object>
+  <object class="GtkImage" id="img_offset_calculator">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+  </object>
   <object class="GtkListStore" id="lstst_icon_themes">
     <columns>
       <!-- column-name path -->
