--- a/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
+++ b/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
@@ -7994,7 +7994,7 @@ LOG</string>
                           <number>0</number>
                          </property>
                          <item>
-                          <widget class="QTabWidget" name="tabWidget_utilities">
+                          <widget class="DetachTabWidget" name="tabWidget_utilities">
                            <property name="currentIndex">
                             <number>0</number>
                            </property>
@@ -18442,6 +18442,11 @@ SCROLL</string>
    <class>HalBar</class>
    <extends>QWidget</extends>
    <header>qtvcp.widgets.bar</header>
+  </customwidget>
+  <customwidget>
+   <class>DetachTabWidget</class>
+   <extends>QTabWidget</extends>
+   <header>qtvcp.widgets.detach_tabs</header>
   </customwidget>
   <customwidget>
    <class>QWebView</class>
